# multi-agent-hedgefund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_analysis.py
.github/workflows/: ci.yml
scripts/: benchmark.py  debug_agents.py  init.sql  run_api.py  test_analysis.py
src/: __init__.py
src/agents/: __init__.py  base.py  consensus.py  data_scout.py  fundamental_analyst.py  portfolio_manager.py  sentiment_analyst.py  technical_analyst.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routers/: __init__.py  agents.py  analysis.py  health.py
src/cli/: __init__.py  animations.py  app.py  branding.py  display.py  hitl.py  interactive.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  financial_apis.py  instructions_db.py  tavily_client.py  tavily_tools.py
src/graph/: __init__.py  guardrails.py  workflow.py  workflow_streaming.py
src/llm/: __init__.py  model_manager.py  ollama_client.py
src/memory/: __init__.py  checkpointer.py  vector_store.py
src/reports/: __init__.py  pdf_generator.py
src/state/: __init__.py  schema.py
tests/: __init__.py  conftest.py  test_api_schemas.py  test_config.py  test_financial_apis.py  test_guardrails.py  test_ollama_client.py  test_state.py
