[project]
name = "alpha-council"
version = "0.1.0"
description = "Multi-Agent Hedge Fund Analysis System powered by local LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langfuse>=3.12.0",
    "langgraph>=1.0.6",
    "pandas>=2.3.3",
    "prompt-toolkit>=3.0.52",
    "psycopg>=3.3.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.45",
    "ta>=0.11.0",
    "tavily-python>=0.7.19",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.40.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
aegisflux = "src.cli.interactive:main"

